@@ -20,8 +20,10 @@ gcs (0.3.20+nmu1) UNRELEASED; urgency=low
     debian templates for gcs.
   * Added feature to change the base directory of diverted files. Useful for a
     run-parts style of directory. [config: diverts_basepath]
+  * Removed execution permission to the templates and gave them later to the
+    post and pre scripts
 
- -- Enrique Hernández Bello <quique@osl.ull.es>  Sat, 06 Feb 2010 20:23:41 +0000
+ -- Enrique Hernández Bello <quique@osl.ull.es>  Sat, 06 Feb 2010 21:31:35 +0000
 
 gcs (0.3.20) jaunty; urgency=low
 
